LWC Amazon Project/force-app/main/default/objects/amzon_User__c/amzon_User__c.object-meta.xml
<CustomObject>
    <label>amzon User</label>
    <nameField>
        <displayFormat>Amz-{0000}</displayFormat>
        <label>am Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>amzon Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>