LWC Amazon Project/force-app/main/default/objects/amzon_User__c/fields/amzon_Email__c.field-meta.xml
<CustomField>
    <fullName>amzon_Email__c</fullName>
    <label>amzon Email</label>
    <type>Email</type>
</CustomField>