LWC Amazon Project/force-app/main/default/objects/amzon_User__c/fields/amzon_Password__c.field-meta.xml
<CustomField>
    <fullName>amzon_Password__c</fullName>
    <label>amzon Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>