LWC Amazon Project/force-app/main/default/objects/amzon_User__c/fields/amzon_Phone__c.field-meta.xml
<CustomField>
    <fullName>amzon_Phone__c</fullName>
    <label>amzon Phone</label>
    <type>Phone</type>
</CustomField>