LWC Amazon Project/force-app/main/default/objects/amzon_User__c/fields/amzon_Username__c.field-meta.xml
<CustomField>
    <fullName>amzon_Username__c</fullName>
    <label>amzon Username</label>
    <type>Email</type>
</CustomField>